src/test/deca/context/invalid/invalid_sans_objet/false_assign.deca
// Description:
//    test de programme contextuellement incorrect.
//
// Resultats:
//    Ligne 12 : Erreur de déclaration.
//    on affecte à x de type int une valeur de type string.
//
// Historique:
//    cree le 09/01/2021

{
	int x = "x";
}